# ietfdata-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README
releases/: ietfdata-rs-0.1.1.crate  ietfdata-rs-0.2.0.crate  ietfdata-rs-0.2.1.crate  ietfdata-rs-0.2.2.crate  ietfdata-rs-0.2.3.crate  ietfdata-rs-0.2.4.crate  ietfdata-rs-0.3.0.crate
src/: lib.rs
src/api/: document.rs  email.rs  group.rs  mod.rs  person.rs
