[package]
name = "ietfdata-rs"
version = "0.2.2"
authors = ["Colin Perkins <csp@csperkins.org>"]
edition = "2018"

description = "A Rust library to access the IETF Datatracker"
homepage = "https://github.com/csperkins/ietfdata-rs"
repository = "https://github.com/csperkins/ietfdata-rs"
readme = "README"
keywords = ["network", "networking", "protocol", "ietf"]
categories = ["network-programming"]
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono       = "0.4.7"
reqwest      = "0.9.19"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"


